objects/autoObject__c.object
<CustomObject>
    <description>This is autoObject</description>
    <fields>
        <fullName>auto_id__c</fullName>
        <description>this is auto_id</description>
        <label>auto_id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>auto_name__c</fullName>
        <description>this is auto_name</description>
        <label>auto_name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>auto_number__c</fullName>
        <label>auto_number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>autoObject</label>
    <nameField>
        <label>autoObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>autoObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>